<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/web_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/slate_blue"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/back_from_profile"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:text="My Profile"
            />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/profile_imageview"
        android:layout_width="match_parent"
        android:background="@drawable/profile"
        android:scaleType="centerCrop"
        android:layout_height="240dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/profile_name"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/user_name"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/track"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/country"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/email"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/phone"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="5dp"
        android:text="@string/slack"
        android:textSize="15sp"/>

</LinearLayout>